--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Good For Brain</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
+    <link rel="icon" href="logo.png">
 
 </head>
 <body>
