--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 </head>
 <body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5386128518939223"
+     crossorigin="anonymous"></script>
     <div class="memorygame">
         <div class="game">
             <div><button class="btn" onclick="change(0)"><img src="word-game/bg.png" id="0" width="50" height="50"></button>  <button class="btn" onclick="change(1)"><img src="word-game/bg.png" id="1" width="50" height="50"></button>  <button class="btn" onclick="change(2)"><img src="word-game/bg.png" id="2" width="50" height="50"></button>  <button class="btn" onclick="change(3)"><img src="word-game/bg.png" id="3" width="50" height="50"></button>  <button class="btn" onclick="change(4)"><img src="word-game/bg.png" id="4" width="50" height="50"></button>  <button class="btn" onclick="change(5)"><img src="word-game/bg.png" id="5" width="50" height="50"></button></div>
@@ -22,7 +24,7 @@
         </div>
         <div class="timer">
             <div><span class="clock" id="timer">0:00</span></div>
-            <div><button class="startbtn"onclick="startwatch()"><img src="start-button.png" id="start"width="112" height="50"></img></button></div>
+            <div onclick="startwatch()" class="startbtn" id="start">Start</div>
         </div>
     </div>
 
